# chili

./: .gitignore  Diff.hs  Dominator.hs  Main.hs  Patch.hs  README.md  Test.hs  Types.hs  cabal.project  chili.cabal  custom-events.md  shell.nix
Chili/: Canvas.hs  Debug.hs  Diff.hs  HSX.hs  Image.hs  Internal.hs  Loop.hs  Patch.hs  PointerEventObject.hs  TDVar.hs  Types.hs
Chili/Canvas/: Color.hs  Image.hs  ImageData.hs  Types.hs
Dominator/: DOMC.hs  Diff.hs  DiffPartial.hs  HSX.hs  JSDOM.hs  Patch.hs  PatchPartial.hs  Types.hs
example/: Dominator.html  DominatorMain.hs  ExampleDOMC.hs  Main.hs
test/: Spec.hs
tests/: DiffTest.hs  default.nix  node-packages.nix  package.json
