name:                chili
version:             0.1.0.0
synopsis:            yet another clientside ui library
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md, README.md~
cabal-version:       >=1.10

executable chili
  main-is:             Main.hs
  build-depends:       aeson,
                       base >=4.8 && <4.9,
                       containers,
                       hsx2hs,
                       ghcjs-base,
                       lens,
                       machines,
                       mtl,
                       stm,
                       text
  default-language:    Haskell2010
