name:                chili
version:             0.1.3
synopsis:            yet another clientside ui library
description:         Model/View with components that emit browser events
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  build-depends:       aeson,
                       base >=4.8 && <4.13,
                       bytestring,
                       containers,
                       haskell-src-meta,
                       html-parse,
                       hsx2hs,
                       ghcjs-base,
                       lens,
                       mtl,
                       stm,
                       template-haskell,
                       text
  default-language:    Haskell2010
  exposed-modules:
                  Chili.Canvas
                  Chili.Canvas.Image
                  Chili.Canvas.ImageData
                  Chili.Canvas.Types
                  Chili.Diff
                  Chili.HSX
                  Chili.Patch
                  Chili.TDVar
                  Chili.Types
                  Chili.Loop
                  Chili.Internal
                  Dominator
                  Dominator.Diff
                  Dominator.DOMC
                  Dominator.JSDOM
                  Dominator.Patch
                  Dominator.HSX
                  Dominator.Types

Test-suite spec
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       containers,
                       hspec,
                       hsx2hs,
                       chili,
                       text
  default-language:    Haskell2010
  ghc-options:         -threaded -O2
